# instmeas

./: CMakeLists.txt  LICENSE  README.md
include/: instmeas.h  libinstmeas.h
src/: main.cpp
